Repair img size on ios

--- a/src/components/feature/ArtItem/ArtItem.module.scss
+++ b/src/components/feature/ArtItem/ArtItem.module.scss
@@ -78,7 +78,6 @@
   max-width: 100%;
 
   @include xxxl {
-    width: auto;
     height: 100%;
     max-height: 100%;
     max-width: 100%;
